--- a/4.html
+++ b/4.html
@@ -11,7 +11,7 @@
                     num = parseInt(num/10)
                     rev = rev * 10  + remainder
                 }
-                alert('Reverse of string ' + str + ' is ' + rev);
+                alert('Reverse of the number ' + str + ' is ' + rev);
             }
             else
             {
@@ -23,7 +23,7 @@
                     }
                 }
                 if (i < str.length) {
-                    alert('The position of the left most vowel is' + (i + 1));
+                    alert('The position of the left most vowel is ' + (i + 1));
                 } else {
                     alert('No vowel found in the string');
                 }
